[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Commands.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/World.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/UserInterface.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Main.gd" type="Script" id=5]

[node name="Main" type="Node"]
script = ExtResource( 5 )

[node name="UserInterface" parent="." instance=ExtResource( 4 )]

[node name="World" parent="." instance=ExtResource( 3 )]

[node name="Commands" parent="." instance=ExtResource( 2 )]

[connection signal="valid_text_entered" from="UserInterface" to="." method="_on_UserInterface_valid_text_entered"]
